<resources>
    <string name="app_name">MoviePlace</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="signIn">Sing In</string>
    <string name="register">DON`T HAVE AN ACCOUNT? <b>SIGN UP</b></string>
    <string name="forgot">Forgot Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">SIGN UP</string>
    <string name="login">ALREADY HAVE AN ACCOUNT? <b>SIGN IN</b></string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_user">User</string>
    <string name="complete_name">Complete Name</string>
    <string name="email">Email</string>
    <string name="icono_edit">icono_edit</string>
    <string name="log_out">Log out</string>
    <string name="personal_information">Personal Information</string>
    <string name="change_password">Change Password</string>
    <string name="my_likes">My likes</string>
    <string name="search">Genre, director, actor, …</string>
    <string name="map">Map</string>
    <string name="scene_image">Scene Image</string>
    <string name="login_failed">Login Failed!</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="welcome">Welcome</string>
    <string name="login_failed_email">Login Failed User</string>
    <string name="login_failed_login">Login Failed Password</string>
    <string name="phone">Phone Number</string>
    <string name="recoverPassword">Recover Password</string>
    <string name="getPassword">Get Password</string>
    <string name="rememberLogin">REMEMBER YOUR PASSWORD? <b>SIGN IN</b></string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="email_taken">Email Taken</string>
    <string name="sign_up_bad_email_format">Email not Valid</string>
    <string name="sign_up_fb_connection_error">Network Error</string>
    <string name="sign_up_connection_error">Connection Error</string>
    <string name="sign_up_server_error">Server Error</string>
    <string name="unknown_sign_up_error">Uknown Sign Up</string>
    <string name="emailConfirmationMessage">Confirmation Email</string>
    <string name="login_failed_server">Login Failed Server!</string>
    <string name="title_filter">Filter</string>
</resources>