<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="@drawable/background2">

    <Space
        android:layout_width="match_parent"
        android:layout_height="180dp" />

    <EditText
        android:id="@+id/editTextUser"

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="25dp"

        android:layout_marginRight="25dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edt_style"
        android:drawableStart="@drawable/userwhite"

        android:drawablePadding="10dp"

        android:ems="10"
        android:hint="@string/user"

        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editTextPassword"

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"

        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="5dp"
        android:drawablePadding="10dp"

        android:drawableStart="@drawable/lockwhite"

        android:hint="@string/password"
        android:inputType="textPassword"

        android:background="@drawable/edt_style"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />

    <TextView
        android:id="@+id/textForgot"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginEnd="30dp"
        android:gravity="end"

        android:text="@string/forgot"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/buttonSignIn"

        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="50dp"

        android:text="@string/signIn"
        android:textSize="15dp"

        android:background="@drawable/btn_style"
        app:backgroundTint="@null" />

    <TextView
        android:id="@+id/textView"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="40dp"
        android:layout_marginTop="5dp"
        android:gravity="center"

        android:text="@string/register"
        android:textColor="@color/white"
        />


</LinearLayout>