<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sillas_cine"
    tools:context=".ui.profile.ProfileFragment">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="119dp"
        android:layout_height="106dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/userwhite"
        app:civ_border_color="@color/black1"
        app:civ_border_width="2dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/editTextUser2"

        android:layout_width="249dp"
        android:layout_height="48dp"

        android:background="@drawable/edt_style"

        android:drawablePadding="10dp"

        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textColor="@color/white"

        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="150dp" />

    <ImageButton
        android:id="@+id/imgbutton1"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/editwhite"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="150dp" />

    <EditText
        android:id="@+id/editTextUser3"

        android:layout_width="249dp"
        android:layout_height="48dp"

        android:background="@drawable/edt_style"

        android:drawablePadding="10dp"

        android:ems="10"
        android:hint="@string/complete_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"

        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="203dp" />

    <ImageButton
        android:id="@+id/imgbutton2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/editwhite"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="203dp" />

    <EditText
        android:id="@+id/editTextUser4"

        android:layout_width="249dp"
        android:layout_height="48dp"

        android:background="@drawable/edt_style"

        android:drawablePadding="10dp"

        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"

        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="255dp" />

    <ImageButton
        android:id="@+id/imgbutton3"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/editwhite"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="288dp"
        tools:layout_editor_absoluteY="255dp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="371dp"
        android:layout_height="48dp"


        android:text="@string/personal_information"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"

        android:drawablePadding="10dp"
        android:background="@drawable/edt_style"

        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="384dp"
        app:background="@drawable/edt_style"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imgbutton4"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="48dp"
        android:layout_height="50dp"
        android:src="@drawable/next_icon_white"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="346dp"
        tools:layout_editor_absoluteY="384dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="371dp"
        android:layout_height="48dp"


        android:background="@drawable/edt_style"
        android:drawablePadding="10dp"
        android:text="@string/change_password"
        android:textColor="@color/white"

        android:textColorHint="@color/white"
        android:textSize="15sp"

        app:background="@drawable/edt_style"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="442dp" />

    <ImageButton
        android:id="@+id/imgbutton5"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="48dp"
        android:layout_height="50dp"
        android:src="@drawable/next_icon_white"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="346dp"
        tools:layout_editor_absoluteY="442dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="371dp"
        android:layout_height="48dp"


        android:background="@drawable/edt_style"
        android:drawablePadding="10dp"
        android:text="@string/my_likes"
        android:textColor="@color/white"

        android:textColorHint="@color/white"
        android:textSize="15sp"

        app:background="@drawable/edt_style"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="500dp" />

    <ImageButton
        android:id="@+id/imgbutton6"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="48dp"
        android:layout_height="50dp"
        android:src="@drawable/next_icon_white"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="346dp"
        tools:layout_editor_absoluteY="500dp" />

    <Button
        android:id="@+id/buttonSignIn2"

        android:layout_width="371dp"
        android:layout_height="48dp"


        android:background="@drawable/btn_style"
        android:text="@string/log_out"

        android:textSize="15sp"
        app:backgroundTint="@null"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="600dp" />


</androidx.constraintlayout.widget.ConstraintLayout>