<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_signup"
    tools:context=".ui.signUp.SignUp"
    android:orientation="vertical"
    android:background="@drawable/background2">


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/edt_style"
        android:drawableStart="@drawable/emailicon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/editTextPassword2"

        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginBottom="128dp"

        android:background="@drawable/edt_style"

        android:drawableStart="@drawable/lockwhite"

        android:drawablePadding="10dp"
        android:paddingEnd="55dp"
        android:ems="10"

        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"

        android:layout_width="360dp"
        android:layout_height="60dp"
        android:background="@drawable/edt_style"

        android:drawableStart="@drawable/lockwhite"

        android:drawablePadding="10dp"

        android:ems="10"
        android:hint="@string/password"
        android:paddingEnd="55dp"

        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUser" />

    <Button
        android:id="@+id/visibilityPassword2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/visibilityon"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPassword2"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword2"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword2"
        app:layout_constraintVertical_bias="0.514" />

    <Button
        android:id="@+id/visibilityPassword"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/visibilityon"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.485" />

    <EditText
        android:id="@+id/editTextUser"

        android:layout_width="360dp"
        android:layout_height="60dp"

        android:layout_marginTop="16dp"
        android:background="@drawable/edt_style"
        android:drawableStart="@drawable/userwhite"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/buttonSignUp"

        android:layout_width="380dp"
        android:layout_height="45dp"


        android:layout_marginBottom="88dp"
        android:background="@drawable/btn_style"

        android:text="@string/signUp"
        android:textSize="15dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textSignIn"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:clickable="true"

        android:focusable="true"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
        app:layout_constraintVertical_bias="0.202" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/red2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>