<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_forgotPassword"
    tools:context=".ForgotPassword"
    android:orientation="vertical"
    android:background="@drawable/background2"
    android:clickable="true"
    android:focusable="true">

    <EditText
        android:id="@+id/editTextEmail"

        android:layout_width="360dp"
        android:layout_height="60dp"

        android:layout_marginTop="332dp"
        android:background="@drawable/edt_style"

        android:drawableStart="@drawable/emailicon"

        android:drawablePadding="10dp"
        android:ems="10"

        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_GetPassword"

        android:layout_width="380dp"
        android:layout_height="45dp"

        android:layout_marginBottom="92dp"
        android:background="@drawable/btn_style"

        android:text="@string/getPassword"
        android:textSize="15dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textSignIn"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="52dp"

        android:gravity="center"
        android:text="@string/rememberLogin"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/red2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>